--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
-    "axios": "^0.21.1",
+    "axios": "^0.21.3",
     "core-js": "^3.6.5",
     "firebase": "^8.7.1",
     "mysql": "^2.18.1",
     "quasar": "^2.0.0",
-    "vuex": "^4.0.1"
+    "vue": "^3.2.8",
+    "vue-router": "^4.0.11",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
